Name:                timeoutbug
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable timeoutbug
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: async
               , base
               , bytestring
               , enclosed-exceptions
               , http-client
               , lens
               , MonadCatchIO-transformers
               , mtl
               , snap-core
               , snap-server
               , string-class
               , transformers
               , wreq

  ghc-options: -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -O2
